--- a/covid19/src/main/res/layout/countries_fragment.xml
+++ b/covid19/src/main/res/layout/countries_fragment.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="?attr/actionBarSize" />
 
 </FrameLayout>
