--- a/covid19/src/main/res/layout/country_item_view.xml
+++ b/covid19/src/main/res/layout/country_item_view.xml
@@ -16,7 +16,6 @@
         android:textStyle="italic|bold"
         android:textSize="@dimen/item_module_text_size"
         android:autoSizeTextType="uniform"
-        android:background="@android:color/darker_gray"
         android:layout_margin="4dp"
         tools:text="Country Name" />
 
@@ -27,8 +26,16 @@
         android:layout_margin="4dp"
         android:textStyle="italic|bold"
         android:padding="@dimen/item_cases_padding"
-        android:background="@android:color/darker_gray"
         tools:text="@string/number_of_cases"/>
+
+    <TextView
+        android:id="@+id/recoveries"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:textStyle="italic|bold"
+        android:padding="@dimen/item_cases_padding"
+        tools:text="@string/number_of_recoveries" />
 
     <TextView
         android:id="@+id/deaths"
@@ -37,7 +44,7 @@
         android:layout_margin="4dp"
         android:textStyle="italic|bold"
         android:padding="@dimen/item_cases_padding"
-        android:background="@android:color/darker_gray"
+        android:background="#EF9C9C"
         tools:text="@string/number_of_deaths" />
 
     <View
