--- a/covid19/src/main/res/layout/countries_fragment.xml
+++ b/covid19/src/main/res/layout/countries_fragment.xml
@@ -8,10 +8,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/countries"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="?attr/actionBarSize" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
