--- a/covid19/src/main/res/values/dimens.xml
+++ b/covid19/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="item_country_padding">4dp</dimen>
     <dimen name="item_country_text_size">16sp</dimen>
-    <dimen name="item_cases_padding">2sp</dimen>
+    <dimen name="item_cases_padding">2dp</dimen>
+    <dimen name="item_cases_end_padding">8dp</dimen>
     <dimen name="item_cases_text_size">16sp</dimen>
 </resources>
