--- a/covid19/src/main/res/layout/total_item_view.xml
+++ b/covid19/src/main/res/layout/total_item_view.xml
@@ -31,6 +31,7 @@
             android:gravity="end"
             android:layout_margin="4dp"
             android:textStyle="italic|bold"
+            android:textSize="@dimen/item_total_text_size"
             android:paddingTop="@dimen/item_cases_padding"
             android:paddingBottom="@dimen/item_cases_padding"
             android:paddingStart="@dimen/item_cases_padding"
@@ -44,6 +45,7 @@
             android:gravity="end"
             android:layout_margin="4dp"
             android:textStyle="italic|bold"
+            android:textSize="@dimen/item_total_text_size"
             android:paddingTop="@dimen/item_cases_padding"
             android:paddingBottom="@dimen/item_cases_padding"
             android:paddingStart="@dimen/item_cases_padding"
@@ -57,6 +59,7 @@
             android:gravity="end"
             android:layout_margin="4dp"
             android:textStyle="italic|bold"
+            android:textSize="@dimen/item_total_text_size"
             android:paddingTop="@dimen/item_cases_padding"
             android:paddingBottom="@dimen/item_cases_padding"
             android:paddingStart="@dimen/item_cases_padding"
@@ -70,6 +73,7 @@
             android:gravity="end"
             android:layout_margin="4dp"
             android:textStyle="italic|bold"
+            android:textSize="@dimen/item_module_text_size"
             android:paddingTop="@dimen/item_cases_padding"
             android:paddingBottom="@dimen/item_cases_padding"
             android:paddingStart="@dimen/item_cases_padding"
