--- a/covid19/src/main/res/layout/countries_fragment.xml
+++ b/covid19/src/main/res/layout/countries_fragment.xml
@@ -10,6 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/countries"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/country_item_view"/>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
