--- a/covid19/src/main/res/layout/total_item_view.xml
+++ b/covid19/src/main/res/layout/total_item_view.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/item_country_padding"
-            android:textStyle="italic|bold"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
             android:textSize="@dimen/item_module_text_size"
             android:autoSizeTextType="uniform"
             android:layout_margin="4dp"
