--- a/covid19/src/main/res/navigation/covid_navigation.xml
+++ b/covid19/src/main/res/navigation/covid_navigation.xml
@@ -10,5 +10,13 @@
         android:id="@+id/countriesFragment"
         android:name="com.pshetye.covid19.ui.countries.fragments.CountriesFragment"
         android:label="@string/title_covid19"
-        tools:item="@layout/countries_fragment" />
+        tools:item="@layout/countries_fragment" >
+        <action
+            android:id="@+id/action_countries_to_sort"
+            app:destination="@id/sortOptionFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/sortOptionFragment"
+        android:name="com.pshetye.covid19.ui.countries.fragments.SortOptionFragment"
+        tools:layout="@layout/fragment_sort_option_list_dialog" />
 </navigation>
