--- a/covid19/src/main/res/values/dimens.xml
+++ b/covid19/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="item_cases_padding">2dp</dimen>
     <dimen name="item_cases_end_padding">8dp</dimen>
     <dimen name="item_cases_text_size">16sp</dimen>
+    <dimen name="item_sort_option_margin">4dp</dimen>
+    <dimen name="item_sort_option_elevation">4dp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
+    <dimen name="bottom_sheet_margin">56dp</dimen>
+    <dimen name="bottom_sheet_negative_margin">-56dp</dimen>
 </resources>
