--- a/covid19/src/main/res/layout/total_item_view.xml
+++ b/covid19/src/main/res/layout/total_item_view.xml
@@ -47,7 +47,7 @@
         <TextView
             android:id="@+id/deaths"
             style="@style/total_values"
-            android:background="@drawable/deaths_text_bg"
+            android:background="@drawable/sorted_by_text_bg"
             tools:text="@string/number_of_deaths" />
 
     </LinearLayout>
