Toggle bottom sheet visibility on data load

--- a/covid19/src/main/res/layout/countries_fragment_with_bottom_sheet.xml
+++ b/covid19/src/main/res/layout/countries_fragment_with_bottom_sheet.xml
@@ -27,6 +27,7 @@
         layout="@layout/countries_bottom_sheet_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/bottom_sheet_negative_margin" />
+        android:layout_marginTop="@dimen/bottom_sheet_negative_margin"
+        android:visibility="invisible"/>
 
 </LinearLayout>
