--- a/covid19/src/main/res/layout/countries_fragment_with_bottom_sheet.xml
+++ b/covid19/src/main/res/layout/countries_fragment_with_bottom_sheet.xml
@@ -18,7 +18,7 @@
             android:id="@+id/countries"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/country_item_view" />
+            tools:listitem="@layout/country_view" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
