--- a/covid19/src/main/res/layout/country_view.xml
+++ b/covid19/src/main/res/layout/country_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="8dp"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp">
 
@@ -20,9 +20,7 @@
             android:layout_margin="4dp"
             android:autoSizeTextType="uniform"
             android:padding="@dimen/item_country_padding"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
-            android:textSize="@dimen/item_module_text_size"
-            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -127,4 +125,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
