--- a/covid19/src/main/res/values/dimens.xml
+++ b/covid19/src/main/res/values/dimens.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_country_padding">4dp</dimen>
-    <dimen name="item_country_text_size">16sp</dimen>
+    <dimen name="item_country_text_size">14sp</dimen>
+    <dimen name="item_text_margin">2dp</dimen>
     <dimen name="item_cases_padding">2dp</dimen>
     <dimen name="item_cases_end_padding">8dp</dimen>
     <dimen name="item_cases_text_size">16sp</dimen>
-    <dimen name="item_sort_option_margin">4dp</dimen>
+    <dimen name="item_sort_option_margin">0dp</dimen>
     <dimen name="item_sort_option_elevation">4dp</dimen>
     <dimen name="list_item_spacing">16dp</dimen>
     <dimen name="list_item_spacing_half">8dp</dimen>
