--- a/covid19/src/main/res/values/styles.xml
+++ b/covid19/src/main/res/values/styles.xml
@@ -23,48 +23,58 @@
     <style name="sort_option" parent="selected_sort_option">
         <item name="android:elevation">@dimen/item_sort_option_elevation</item>
     </style>
-    <style name="country_title">
+    <style name="total_heading">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">@dimen/item_cases_padding</item>
         <item name="android:paddingStart">@dimen/item_cases_end_padding</item>
         <item name="android:paddingBottom">@dimen/item_cases_padding</item>
-        <item name="android:paddingEnd">@dimen/item_cases_padding</item>
-        <item name="android:textSize">@dimen/item_country_text_size</item>
-        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Caption</item>
+        <item name="android:paddingEnd">@dimen/item_cases_end_padding</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Headline3</item>
+        <item name="android:gravity">end</item>
+    </style>
+    <style name="country_title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/item_text_margin</item>
+        <item name="android:paddingTop">@dimen/item_cases_padding</item>
+        <item name="android:paddingStart">@dimen/item_cases_end_padding</item>
+        <item name="android:paddingBottom">@dimen/item_cases_padding</item>
+        <item name="android:paddingEnd">@dimen/item_cases_end_padding</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Subtitle1</item>
         <item name="android:gravity">end</item>
     </style>
     <style name="country_value">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/item_text_margin</item>
         <item name="android:paddingTop">@dimen/item_cases_padding</item>
-        <item name="android:paddingStart">@dimen/item_cases_padding</item>
+        <item name="android:paddingStart">@dimen/item_cases_end_padding</item>
         <item name="android:paddingBottom">@dimen/item_cases_padding</item>
         <item name="android:paddingEnd">@dimen/item_cases_end_padding</item>
         <item name="android:gravity">start</item>
-        <item name="android:textSize">@dimen/item_country_text_size</item>
-        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Button</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Subtitle1</item>
     </style>
     <style name="total_title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/item_text_margin</item>
         <item name="android:paddingTop">@dimen/item_cases_padding</item>
         <item name="android:paddingStart">@dimen/item_cases_end_padding</item>
         <item name="android:paddingBottom">@dimen/item_cases_padding</item>
-        <item name="android:paddingEnd">@dimen/item_cases_padding</item>
-        <item name="android:textSize">@dimen/item_total_text_size</item>
-        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Caption</item>
+        <item name="android:paddingEnd">@dimen/item_cases_end_padding</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Subtitle1</item>
         <item name="android:gravity">end</item>
     </style>
     <style name="total_values">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/item_text_margin</item>
         <item name="android:paddingTop">@dimen/item_cases_padding</item>
-        <item name="android:paddingStart">@dimen/item_cases_padding</item>
+        <item name="android:paddingStart">@dimen/item_cases_end_padding</item>
         <item name="android:paddingBottom">@dimen/item_cases_padding</item>
         <item name="android:paddingEnd">@dimen/item_cases_end_padding</item>
         <item name="android:gravity">start</item>
-        <item name="android:textSize">@dimen/item_total_text_size</item>
-        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Button</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Subtitle1</item>
     </style>
 </resources>
