--- a/covid19/src/main/res/layout/countries_bottom_sheet_main.xml
+++ b/covid19/src/main/res/layout/countries_bottom_sheet_main.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/item_module_padding"
+    android:background="@color/bottom_sheet_transparency"
+    android:orientation="horizontal"
+    android:weightSum="1.0"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sorted_by"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
         style="@style/selected_sort_option"
         android:text="@string/sorted_by"
         tools:text="@string/sorted_by"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/search"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        style="@style/selected_sort_option"
+        android:text="@string/search"
+        tools:text="@string/search"/>
 
 </LinearLayout>
