--- a/covid19/src/main/res/values/colors.xml
+++ b/covid19/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="deaths_highlight">#EF9C9C</color>
     <color name="sort_option_bg">#5A5A5A</color>
     <color name="selected_sort_option_bg">#E6E6E6</color>
+    <color name="bottom_sheet_transparency">#1A000000</color>
 </resources>
