--- a/covid19/src/main/res/values/dimens.xml
+++ b/covid19/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="list_item_spacing_half">8dp</dimen>
     <dimen name="bottom_sheet_margin">0dp</dimen>
     <dimen name="bottom_sheet_negative_margin">-48dp</dimen>
+    <dimen name="bottom_sheet_positive_margin">48dp</dimen>
 </resources>
