Some search files and plit app

--- a/covid19/src/main/res/layout/fragment_search_dialog_list_dialog.xml
+++ b/covid19/src/main/res/layout/fragment_search_dialog_list_dialog.xml
@@ -1,11 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:paddingTop="@dimen/list_item_spacing_half"
-    android:paddingBottom="@dimen/list_item_spacing_half"
-    tools:context=".ui.countries.fragments.SearchDialogFragment"
-    tools:listitem="@layout/fragment_search_dialog_list_dialog_item" />
+    android:background="@android:color/transparent">
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/results"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:clipToPadding="false"
+                android:layout_margin="@dimen/list_item_spacing_half"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/search_box"
+                tools:context="com.pshetye.covid19.ui.countries.fragments.SearchDialogFragment"
+                tools:listitem="@layout/fragment_search_dialog_list_dialog_item" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/list_item_spacing_half"
+                android:layout_margin="@dimen/list_item_spacing_half"
+                android:hint="@string/search_hint"
+                android:focusedByDefault="true"
+                android:focusableInTouchMode="true"
+                android:focusable="true"
+                android:background="@null"
+                app:layout_constrainedHeight="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/results"
+                app:layout_constraintBottom_toBottomOf="parent"
+                style="@style/Widget.AppCompat.EditText"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+</FrameLayout>
