--- a/covid19/src/main/res/navigation/covid_navigation.xml
+++ b/covid19/src/main/res/navigation/covid_navigation.xml
@@ -14,9 +14,16 @@
         <action
             android:id="@+id/action_countries_to_sort"
             app:destination="@id/sortOptionFragment" />
+        <action
+            android:id="@+id/action_countries_to_search"
+            app:destination="@id/searchDialogFragment" />
     </fragment>
     <dialog
         android:id="@+id/sortOptionFragment"
         android:name="com.pshetye.covid19.ui.countries.fragments.SortOptionFragment"
         tools:layout="@layout/fragment_sort_option_list_dialog" />
+    <dialog
+        android:id="@+id/searchDialogFragment"
+        android:name="com.pshetye.covid19.ui.countries.fragments.SearchDialogFragment"
+        android:label="SearchDialogFragment" />
 </navigation>
